--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "array-move": "^4.0.0",
     "handlebars": "^4.7.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-debounce-input": "^3.2.3",
+    "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-sortable-hoc": "^2.0.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
