--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-simple-tree-menu": "^1.1.18",
     "react-sortable-hoc": "^2.0.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
