--- a/helm/templates/cm.yaml
+++ b/helm/templates/cm.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "msa-psa-employee-ui.fullname" . }}-config
+  name: {{ include "msa-mobile-web-ui.fullname" . }}-config
   namespace: {{ .Release.Namespace }}
 data:
   config.js: |-
