--- a/helm/templates/cm.yaml
+++ b/helm/templates/cm.yaml
@@ -47,5 +47,9 @@ data:
                 index  index.html index.htm;
                 try_files $uri /index.html;
             }
+    
+            location /api/v1 {
+                proxy_pass http://mobile-backend:80;
+            }
         }
     }
