--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.27.1",
     "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.0",
     "react-simple-tree-menu": "^1.1.18",
     "react-sortable-hoc": "^2.0.0",
+    "react-syntax-highlighter": "^15.4.5",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
