--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "array-move": "^4.0.0",
     "handlebars": "^4.7.6",
     "prop-types": "^15.7.2",
+    "rc-input": "0.0.1-alpha.5",
     "react": "^17.0.1",
     "react-debounce-input": "^3.2.3",
     "react-dnd": "^15.1.1",
