--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "array-move": "^4.0.0",
+    "bloomer": "^0.6.5",
     "handlebars": "^4.7.6",
+    "prismjs": "1.20.0",
     "prop-types": "^15.7.2",
     "rc-input": "0.0.1-alpha.5",
     "react": "^17.0.1",
@@ -21,6 +23,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.0",
+    "react-simple-code-editor": "^0.11.0",
     "react-simple-tree-menu": "^1.1.18",
     "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.4.5",
