--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "array-move": "^4.0.0",
     "bloomer": "^0.6.5",
     "handlebars": "^4.7.6",
+    "lodash": "^4.17.21",
     "prismjs": "1.20.0",
     "prop-types": "^15.7.2",
     "rc-input": "0.0.1-alpha.5",
