--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "array-move": "^4.0.0",
     "bloomer": "^0.6.5",
     "handlebars": "^4.7.6",
@@ -23,7 +27,7 @@
     "react-hook-form": "^7.27.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.3",
     "react-simple-code-editor": "^0.11.0",
     "react-simple-tree-menu": "^1.1.18",
     "react-sortable-hoc": "^2.0.0",
@@ -31,6 +35,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
+    "typescript": "4.1.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
@@ -57,5 +62,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.24",
+    "@types/uuid": "^8.3.4"
   }
 }
