--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.14",
     "array-move": "^4.0.0",
     "bloomer": "^0.6.5",
+    "clsx": "^1.1.1",
     "handlebars": "^4.7.6",
     "lodash": "^4.17.21",
     "prismjs": "1.20.0",
@@ -28,10 +29,12 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "react-simple-code-editor": "^0.11.0",
     "react-simple-tree-menu": "^1.1.18",
     "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.4.5",
+    "react-use": "^17.3.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "5.3.3",
@@ -65,6 +68,10 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "react-error-overlay": "6.0.9"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   }
 }
