--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nosferatu500/react-sortable-tree": "^4.0.6",
     "@nosferatu500/theme-file-explorer": "^3.0.15",
+    "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -27,7 +28,9 @@
     "clsx": "^1.1.1",
     "esprima-next": "^5.8.1",
     "handlebars": "^4.7.6",
+    "keycloak-js": "16.1.1",
     "lodash": "^4.17.21",
+    "oauth2-popup-flow": "^1.1.0",
     "prismjs": "1.20.0",
     "prop-types": "^15.7.2",
     "rc-input": "0.0.1-alpha.5",
@@ -42,6 +45,7 @@
     "react-scripts": "4.0.3",
     "react-select": "^5.2.2",
     "react-simple-code-editor": "^0.11.0",
+    "react-simple-oauth2-login": "0.5.3",
     "react-simple-tree-menu": "^1.1.18",
     "react-sortable-hoc": "^2.0.0",
     "react-syntax-highlighter": "^15.4.5",
