--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-simple-oauth2-login": "0.5.3",
     "react-simple-tree-menu": "^1.1.18",
     "react-sortable-hoc": "^2.0.0",
+    "react-spinners": "^0.11.0",
     "react-syntax-highlighter": "^15.4.5",
     "react-use": "^17.3.2",
     "redux": "^4.0.5",
