--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "array-move": "^4.0.0",
     "axios": "^0.26.1",
     "bloomer": "^0.6.5",
