add: zoom and drag

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "src",
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "typeRoots": [
+      "src/types"
+    ]
   },
   "include": [
     "src"
