--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.1",
+    "react-easy-panzoom": "^0.4.4",
     "react-hook-form": "^7.27.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.2.2",
