--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
-#include:
-#  - project: 'neo-projects/gitlab-templates'
-#    ref: master
-#    file: 'web-ui-template.yaml'
+include:
+  - project: 'neo-projects/gitlab-templates'
+    ref: master
+    file: 'web-ui-template.yaml'
 
 stages:
   - build
