--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prismjs": "1.20.0",
     "prop-types": "^15.7.2",
     "rc-input": "0.0.1-alpha.5",
+    "rc-textarea": "0.3.7",
     "react": "^17.0.1",
     "react-debounce-input": "^3.2.3",
     "react-dnd": "^15.1.1",
