warning on unsaved changes

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "@types/react-beforeunload": "^2.1.1",
     "@types/react-dom": "^17.0.14",
     "@types/react-syntax-highlighter": "^13.5.2",
     "array-move": "^4.0.0",
@@ -37,6 +38,7 @@
     "rc-input": "0.0.1-alpha.5",
     "rc-textarea": "0.3.7",
     "react": "^17.0.1",
+    "react-beforeunload": "2.5.3",
     "react-debounce-input": "^3.2.3",
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
