--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dropdown": "1.9.2",
     "react-easy-panzoom": "^0.4.4",
     "react-hook-form": "^7.27.1",
+    "react-notifications-component": "3.4.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
