--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.43",
     "@types/react-beforeunload": "^2.1.1",
     "@types/react-dom": "^17.0.14",
