--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -91,6 +92,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/styled-components": "^5.1.24",
     "@types/uuid": "^8.3.4",
     "react-error-overlay": "6.0.9"
