--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "prop-types": "15.8.1",
     "rc-input": "0.0.1-alpha.5",
     "rc-textarea": "0.3.7",
-    "react": "17.0.2",
+    "react": "^17.0.1",
     "react-beforeunload": "2.5.3",
     "react-debounce-input": "3.2.5",
     "react-dnd": "15.1.2",
     "react-dnd-html5-backend": "15.1.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.1",
     "react-dropdown": "1.10.0",
     "react-easy-panzoom": "0.4.4",
     "react-hook-form": "7.29.0",
@@ -91,9 +91,9 @@
     "@types/jest": "27.4.1",
     "@types/node": "17.0.23",
     "@types/prismjs": "1.26.0",
-    "@types/react": "17.0.43",
+    "@types/react": "^17.0.43",
     "@types/react-beforeunload": "2.1.1",
-    "@types/react-dom": "17.0.14",
+    "@types/react-dom": "^17.0.14",
     "@types/react-syntax-highlighter": "15.5.3",
     "react-error-overlay": "6.0.9"
   }
