--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nosferatu500/react-sortable-tree": "4.1.0",
     "@nosferatu500/theme-file-explorer": "3.0.16",
     "@react-keycloak/web": "3.4.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
