--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,3 +17,4 @@ deploy:
   image: $DOCKER_REGISTRY_PROXY/alpine/helm
   script:
     - helm upgrade --install mobile-web helm --namespace=mobile-platform --set image.tag=sha$CI_COMMIT_SHORT_SHA
+  when: manual
