--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
   "rules": {
     "no-bitwise": 0,
     "react/react-in-jsx-scope": "off",
+    "react/display-name": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "@typescript-eslint/ban-ts-comment": "off",
