--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "resolutions": {
     "es5-ext": "0.10.53",
-    "react-error-overlay": "6.0.9"
+    "react-error-overlay": "6.0.9",
+    "@types/react": "17.0.43"
   },
   "overrides": {
     "es5-ext": "0.10.53",
@@ -18,14 +19,6 @@
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
-    "@types/axios": "0.14.0",
-    "@types/jest": "27.4.1",
-    "@types/node": "17.0.23",
-    "@types/prismjs": "1.26.0",
-    "@types/react": "17.0.43",
-    "@types/react-beforeunload": "2.1.1",
-    "@types/react-dom": "17.0.14",
-    "@types/react-syntax-highlighter": "13.5.2",
     "array-move": "4.0.0",
     "axios": "0.26.1",
     "bloomer": "0.6.5",
@@ -94,7 +87,16 @@
     ]
   },
   "devDependencies": {
+    "@types/array-move": "^2.0.0",
+    "@types/axios": "0.14.0",
+    "@types/jest": "27.4.1",
     "@types/lodash": "4.14.182",
+    "@types/node": "17.0.23",
+    "@types/prismjs": "1.26.0",
+    "@types/react": "17.0.43",
+    "@types/react-beforeunload": "2.1.1",
+    "@types/react-dom": "17.0.14",
+    "@types/react-syntax-highlighter": "13.5.2",
     "@types/styled-components": "5.1.24",
     "@types/uuid": "8.3.4",
     "react-error-overlay": "6.0.9"
