--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bloomer": "0.6.5",
     "clsx": "1.1.1",
     "esprima-next": "5.8.1",
+    "framer-motion": "4.1.17",
     "handlebars": "4.7.7",
     "keycloak-js": "16.1.1",
     "lodash": "4.17.21",
@@ -36,7 +37,7 @@
     "react": "17.0.2",
     "react-beforeunload": "2.5.3",
     "react-debounce-input": "3.2.5",
-    "react-dnd": "16.0.1",
+    "react-dnd": "15.1.2",
     "react-dnd-html5-backend": "15.1.3",
     "react-dom": "17.0.2",
     "react-dropdown": "1.10.0",
@@ -45,7 +46,7 @@
     "react-notifications-component": "3.4.1",
     "react-redux": "7.2.8",
     "react-router-dom": "6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-select": "5.2.2",
     "react-simple-code-editor": "0.11.2",
     "react-simple-oauth2-login": "0.5.3",
