--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
     "react-error-overlay": "6.0.9"
   },
   "dependencies": {
-    "@nosferatu500/react-sortable-tree": "4.1.0",
-    "@nosferatu500/theme-file-explorer": "3.0.16",
+    "@nosferatu500/react-sortable-tree": "4.1.3",
+    "@nosferatu500/theme-file-explorer": "3.0.21",
     "@react-keycloak/web": "3.4.0",
-    "@reduxjs/toolkit": "^1.8.3",
+    "@reduxjs/toolkit": "1.9.0",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
     "array-move": "4.0.0",
     "axios": "0.26.1",
-    "bloomer": "0.6.5",
     "clsx": "1.1.1",
     "esprima-next": "5.8.1",
     "framer-motion": "4.1.17",
     "handlebars": "4.7.7",
     "keycloak-js": "16.1.1",
     "lodash": "4.17.21",
-    "moment": "^2.29.4",
+    "moment": "2.29.4",
     "oauth2-popup-flow": "1.1.0",
     "prismjs": "1.20.0",
     "prop-types": "15.8.1",
@@ -64,7 +63,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"**/*.{ts,tsx,js,jsx}\""
@@ -88,7 +87,7 @@
     ]
   },
   "devDependencies": {
-    "@types/array-move": "^2.0.0",
+    "@types/array-move": "2.0.0",
     "@types/axios": "0.14.0",
     "@types/jest": "27.4.1",
     "@types/lodash": "4.14.182",
