--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/react": "17.0.43",
     "@types/react-beforeunload": "2.1.1",
     "@types/react-dom": "17.0.14",
+    "@types/react-redux": "7.1.24",
     "@types/react-syntax-highlighter": "13.5.2",
     "@types/styled-components": "5.1.24",
     "@types/uuid": "8.3.4",
