--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-error-overlay": "6.0.9"
   },
   "dependencies": {
+    "@emotion/react": "11.10.5",
     "@nosferatu500/react-sortable-tree": "4.1.3",
     "@nosferatu500/theme-file-explorer": "3.0.21",
     "@react-keycloak/web": "3.4.0",
@@ -42,6 +43,7 @@
     "react-dropdown": "1.10.0",
     "react-easy-panzoom": "0.4.4",
     "react-hook-form": "7.29.0",
+    "react-is": "18.2.0",
     "react-notifications-component": "3.4.1",
     "react-redux": "7.2.8",
     "react-router-dom": "6.3.0",
